Fix #529 - Fix survey module textarea overflow

--- a/public/legacy/themes/suite8/css/suitep-base/editview.scss
+++ b/public/legacy/themes/suite8/css/suitep-base/editview.scss
@@ -3660,7 +3660,7 @@ select#sales_stage_advanced {
   }
 
   .col-sm-12 .col-sm-8.edit-view-field textarea#description {
-    width: 100%;
+    width: 90%;
   }
 
   .col-sm-12 .col-sm-8.edit-view-field textarea {
@@ -4283,6 +4283,7 @@ h3 span {
 .fix-inlineEdit-textarea {
   word-wrap: break-word;
   white-space: pre-wrap;
+  overflow-wrap: anywhere;
 }
 
 .inlineEditIcon {
